--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@fontsource/rock-salt": "^4.3.0",
     "@fontsource/shadows-into-light": "^4.3.0",
     "@fontsource/yeseva-one": "^4.3.0",
+    "@reduxjs/toolkit": "^1.6.0",
     "@types/styled-components": "^5.1.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
