--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fontsource/yeseva-one": "^4.3.0",
     "@reduxjs/toolkit": "^1.6.0",
     "@types/styled-components": "^5.1.9",
+    "ethers": "^5.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.4",
