add basic tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,14 @@
 {
-    "exclude": ["node_modules/"]
+    "compilerOptions": {
+        "target": "es6",
+        "jsx": "preserve",
+        "module": "commonjs",
+        "moduleResolution": "node",
+        "noImplicitAny": false,
+        "sourceMap": true,
+        "esModuleInterop": true
+    },
+    "exclude": [
+        "node_modules"
+    ]
 }
