--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "own-me-frontend",
   "version": "0.0.1",
   "description": "Own Me's frontend app.",
   "main": "App.tsx",
@@ -21,35 +21,35 @@
     "@fontsource/rock-salt": "^4.5.0",
     "@fontsource/shadows-into-light": "^4.5.0",
     "@fontsource/yeseva-one": "^4.5.0",
-    "@reduxjs/toolkit": "^1.6.0",
-    "@types/styled-components": "^5.1.11",
-    "ethers": "^5.4.1",
+    "@reduxjs/toolkit": "^1.6.2",
+    "ethers": "^5.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.1",
     "react-transition-group": "^4.4.2",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.0",
-    "@babel/plugin-transform-runtime": "^7.13.15",
-    "@babel/preset-env": "^7.14.0",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/preset-typescript": "^7.13.0",
-    "@babel/runtime": "^7.14.0",
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@babel/runtime": "^7.16.0",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
     "@types/react-transition-group": "^4.4.4",
-    "babel-loader": "^8.2.2",
+    "@types/styled-components": "^5.1.15",
+    "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^9.0.0",
-    "css-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.1",
-    "style-loader": "^3.0.0",
-    "typescript": "^4.2.4",
-    "webpack": "^5.44.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.4.4",
+    "webpack": "^5.62.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0"
   }
 }
