metamask account change logout

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/own-me/frontend.git"
   },
-  "author": "Own Me",
+  "author": "Own Me Inc.",
   "bugs": {
     "url": "https://github.com/own-me/frontend/issues"
   },
