--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "App.tsx",
   "scripts": {
     "dev": "webpack serve --config webpack.config.dev.js",
-    "build": "webpack --config webpack.config.prod.js"
+    "build": "webpack --config webpack.config.prod.js",
+    "lint": "eslint ./"
   },
   "repository": {
     "type": "git",
@@ -42,9 +43,15 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/react-transition-group": "^4.4.4",
     "@types/styled-components": "^5.1.15",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^6.5.1",
+    "eslint": "^8.2.0",
+    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.4.4",
