--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ethers": "^5.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-helmet": "^6.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.1",
     "react-transition-group": "^4.4.2",
@@ -41,6 +42,7 @@
     "@babel/runtime": "^7.16.5",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.4",
     "@types/react-router-dom": "^5.3.2",
     "@types/react-transition-group": "^4.4.4",
     "@types/styled-components": "^5.1.18",
