--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Own Me's frontend app.",
   "main": "App.tsx",
   "scripts": {
+    "postinstall": "typechain --target=ethers-v5 ./abi/*.json --out-dir ./typechain",
     "dev": "webpack serve --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.prod.js",
     "lint": "eslint ./"
@@ -40,6 +41,7 @@
     "@babel/preset-react": "^7.16.5",
     "@babel/preset-typescript": "^7.16.5",
     "@babel/runtime": "^7.16.5",
+    "@typechain/ethers-v5": "^8.0.5",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.4",
@@ -57,6 +59,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
+    "typechain": "^6.1.0",
     "typescript": "^4.5.4",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
