--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fontsource/rock-salt": "^4.5.0",
     "@fontsource/shadows-into-light": "^4.5.0",
     "@fontsource/yeseva-one": "^4.5.0",
+    "@react-three/fiber": "^7.0.24",
     "@reduxjs/toolkit": "^1.7.1",
     "ethers": "^5.5.2",
     "react": "17.0.2",
@@ -32,7 +33,8 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-transition-group": "^4.4.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "three": "^0.136.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
