--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@reduxjs/toolkit": "^1.7.1",
     "ethers": "^5.5.3",
     "react": "17.0.2",
+    "react-content-loader": "^6.1.0",
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.6",
