install visx wordcloud packages

--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "@fontsource/yeseva-one": "^4.5.0",
     "@react-three/fiber": "^7.0.24",
     "@reduxjs/toolkit": "^1.7.1",
+    "@visx/responsive": "^2.4.1",
+    "@visx/scale": "^2.2.2",
+    "@visx/text": "^2.3.0",
+    "@visx/wordcloud": "^2.1.0",
     "ethers": "^5.5.3",
     "react": "17.0.2",
     "react-content-loader": "^6.1.0",
