--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fontsource/yeseva-one": "^4.5.2",
     "@react-three/fiber": "^7.0.26",
     "@reduxjs/toolkit": "^1.8.0",
+    "@veriff/incontext-sdk": "^1.3.1",
     "@visx/responsive": "^2.8.0",
     "@visx/scale": "^2.2.2",
     "@visx/text": "^2.3.0",
