--- a/package.json
+++ b/package.json
@@ -24,23 +24,24 @@
     "@fontsource/rock-salt": "^4.5.5",
     "@fontsource/shadows-into-light": "^4.5.5",
     "@fontsource/yeseva-one": "^4.5.5",
-    "@react-three/fiber": "^8.0.3",
-    "@reduxjs/toolkit": "^1.8.0",
+    "@react-three/fiber": "^8.0.9",
+    "@reduxjs/toolkit": "^1.8.1",
     "@veriff/incontext-sdk": "^1.3.1",
     "@visx/responsive": "^2.8.0",
     "@visx/scale": "^2.2.2",
     "@visx/text": "^2.3.0",
     "@visx/wordcloud": "^2.1.0",
+    "dotenv": "^16.0.0",
     "ethers": "^5.6.2",
     "react": "^18.0.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.2",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.5",
-    "three": "^0.139.1"
+    "three": "^0.139.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
@@ -49,17 +50,18 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@typechain/ethers-v5": "^10.0.0",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
+    "@types/react": "^18.0.1",
+    "@types/react-dom": "^18.0.0",
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.4",
     "@types/styled-components": "^5.1.24",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "babel-loader": "^8.2.4",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
+    "dotenv-webpack": "^7.1.0",
     "eslint": "^8.12.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
@@ -68,8 +70,8 @@
     "style-loader": "^3.3.1",
     "typechain": "^8.0.0",
     "typescript": "^4.6.3",
-    "webpack": "^5.70.0",
+    "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.8.0"
   }
 }
