--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,24 @@
 name: Upload Website
 on:
   push:
-    branches:
-    - master
+    branches: [ main ]
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-west-1
-    - name: npm install && npm run build
-      run: npm install && npm run build
-    - name: Deploy to S3 bucket
-      run: aws s3 sync ./build/ s3://ownme.io --delete
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-west-1
+
+      - name: npm install && npm run build
+        run: npm install && npm run build
+
+      - name: Deploy to S3 bucket
+        run: aws s3 sync ./build/ s3://ownme.io --delete
