--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     "@fontsource/rock-salt": "^4.5.7",
     "@fontsource/shadows-into-light": "^4.5.8",
     "@fontsource/yeseva-one": "^4.5.8",
-    "@react-three/fiber": "^8.0.13",
+    "@react-three/fiber": "^8.0.14",
     "@reduxjs/toolkit": "^1.8.1",
     "@veriff/incontext-sdk": "^1.3.1",
     "@visx/responsive": "^2.10.0",
     "@visx/scale": "^2.2.2",
     "@visx/text": "^2.10.0",
     "@visx/wordcloud": "^2.10.0",
-    "dotenv": "^16.0.0",
+    "@web3auth/base": "^1.0.0-alpha.0",
+    "@web3auth/metamask-adapter": "^1.0.0-alpha.0",
+    "@web3auth/openlogin-adapter": "^1.0.0-alpha.0",
+    "@web3auth/web3auth": "^1.0.0-alpha.0",
+    "dotenv": "^16.0.1",
     "ethers": "^5.6.5",
     "react": "^18.1.0",
     "react-content-loader": "^6.2.0",
@@ -41,7 +45,7 @@
     "react-router-dom": "^6.3.0",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.5",
-    "three": "^0.140.0"
+    "three": "^0.140.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
@@ -50,28 +54,35 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@typechain/ethers-v5": "^10.0.0",
-    "@types/react": "^18.0.8",
+    "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.4",
     "@types/styled-components": "^5.1.24",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
     "babel-loader": "^8.2.5",
+    "buffer": "^6.0.3",
     "copy-webpack-plugin": "^10.2.4",
+    "crypto-browserify": "^3.12.0",
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^7.1.0",
-    "eslint": "^8.14.0",
+    "eslint": "^8.15.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "style-loader": "^3.3.1",
     "typechain": "^8.0.0",
     "typescript": "^4.6.4",
-    "webpack": "^5.71.0",
+    "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.0"
+    "webpack-dev-server": "^4.9.0"
   }
 }
