update NUDE ABIs, package.json, README typo

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "own-me-frontend",
+  "name": "nude-dapp",
   "version": "0.0.1",
-  "description": "Own Me's frontend app.",
+  "description": "Own Me's frontend dapp.",
   "main": "App.tsx",
   "scripts": {
     "postinstall": "typechain --target=ethers-v5 ./abi/*.json --out-dir ./typechain",
@@ -11,67 +11,67 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/own-me/frontend.git"
+    "url": "git+https://github.com/own-me/nude-dapp.git"
   },
   "author": "Own Me Inc.",
   "bugs": {
-    "url": "https://github.com/own-me/frontend/issues"
+    "url": "https://github.com/own-me/nude-dapp/issues"
   },
-  "homepage": "https://github.com/own-me/frontend",
+  "homepage": "https://github.com/own-me/nude-dapp",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@fontsource/poppins": "^4.5.8",
     "@fontsource/rock-salt": "^4.5.7",
     "@fontsource/shadows-into-light": "^4.5.8",
     "@fontsource/yeseva-one": "^4.5.8",
-    "@react-three/fiber": "^8.0.13",
-    "@reduxjs/toolkit": "^1.8.1",
+    "@react-three/fiber": "^8.0.19",
+    "@reduxjs/toolkit": "^1.8.2",
     "@veriff/incontext-sdk": "^1.3.1",
     "@visx/responsive": "^2.10.0",
     "@visx/scale": "^2.2.2",
     "@visx/text": "^2.10.0",
     "@visx/wordcloud": "^2.10.0",
-    "dotenv": "^16.0.0",
-    "ethers": "^5.6.5",
+    "dotenv": "^16.0.1",
+    "ethers": "^5.6.8",
     "react": "^18.1.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
-    "react-redux": "^8.0.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.5",
-    "three": "^0.140.0"
+    "three": "^0.140.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/plugin-transform-runtime": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
+    "@babel/core": "^7.18.2",
+    "@babel/plugin-transform-runtime": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@babel/preset-typescript": "^7.17.12",
     "@typechain/ethers-v5": "^10.0.0",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.3",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.4",
     "@types/styled-components": "^5.1.24",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "babel-loader": "^8.2.5",
-    "copy-webpack-plugin": "^10.2.4",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^7.1.0",
-    "eslint": "^8.14.0",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint": "^8.16.0",
+    "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "typechain": "^8.0.0",
-    "typescript": "^4.6.4",
-    "webpack": "^5.71.0",
+    "typescript": "^4.7.2",
+    "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.0"
+    "webpack-dev-server": "^4.9.0"
   }
 }
