--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
+    "@dethcrypto/eth-sdk": "^0.3.2",
+    "@dethcrypto/eth-sdk-client": "^0.1.6",
     "@typechain/ethers-v5": "^10.0.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
@@ -68,6 +70,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
+    "ts-node": "^10.8.0",
     "typechain": "^8.0.0",
     "typescript": "^4.7.2",
     "webpack": "^5.72.1",
