make default env == production

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-IS_DEV=true
+IS_DEV=false
 NUDE_ADDRESS=0x03748D323633cb570C2F55B9F748e44ae3c4D26E
 NUDE_NFT_ADDRESS=0xeEdF48FfB48e088AF3C36140E327f70c0b4E4E1c
