--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-IS_DEV=false
-NUDE_ADDRESS=0x55613170ECB978D4108F67ae8b747f44d1342Ed1
-NUDE_NFT_ADDRESS=0xA03015921DafE5c676eBc9D1634Ba547709Fc353
-NUDE_DEX_ADDRESS=0xf28476C0A92da39a70C37b1cDae6398F4Aa5b6FF
+IS_DEV=true
+NUDE_ADDRESS=0x7b29342D720c52AeEfd6FEA5f1B8E2aCf0357157
+NUDE_NFT_ADDRESS=0x3f54c40297985bFc193dCbf77574ADcDC6BDF64F
+NUDE_DEX_ADDRESS=0x2cB21EA4EF882566900084721bFdcA35B238AC6C
