update trade function

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-IS_DEV=false
+IS_DEV=true
 NUDE_ADDRESS=0x2dE8A5ee0Ac45C281BC7438F2105F44db8A967f5
 NUDE_NFT_ADDRESS=0xE28B6FcD077E9Bbaf310aD24e9A9de4118A13aaC
 NUDE_DEX_ADDRESS=0x72a05114e0e57Ec5BE8b47638B01DE1f0E476F11
