--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@fontsource/rock-salt": "^4.5.7",
     "@fontsource/shadows-into-light": "^4.5.8",
     "@fontsource/yeseva-one": "^4.5.9",
-    "@react-three/fiber": "^8.0.26",
+    "@react-three/drei": "^9.14.3",
+    "@react-three/fiber": "^8.0.27",
     "@reduxjs/toolkit": "^1.8.2",
     "@veriff/incontext-sdk": "^1.3.1",
     "@visx/responsive": "^2.10.0",
