--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.4",
     "@types/styled-components": "^5.1.24",
+    "@types/three": "^0.141.0",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "babel-loader": "^8.2.5",
